<resources>
    <string name="app_name">dma-android-demo</string>
    <string name="package_name">org.elastos.dma.dmademo</string>
    <string name="input_username">请设置用户名</string>

    <string name="keystore_important">请将密钥存储在安全的脱机位置。千万不要将其暴露在Internet上。\n不要使用电子邮件/云存储/记事本工具来传输密钥库。它很容易被黑客攻击，导致你的资金损失。如果必须在线存储，请确保使用了安全密码保险库应用程序。</string>
    <string name="current_password">当前密码</string>
    <string name="title_withdraw_cash">提现</string>
    <string name="import_wallet">导入钱包</string>
    <string name="app_download_ing">正在下载,请稍候</string>
    <string name="order_ticket_file_space">票档规格：</string>
    <string name="wallet_time_space">时间 ：</string>
    <string name="commit_success">提交成功</string>
    <string name="password_forget">忘记密码 ?导入助记词或私钥可重置密码。</string>
    <string name="title_confirm_order_btn">确认下单</string>
    <string name="transfer_to">转入地址</string>
    <string name="title_main_chain">主链</string>
    <string name="wallet_backup_notice">备份钱包：导出[助记词]并抄写到安全的地方，切勿保存到网络上或截屏。备份后尝试转入、转出小额资产开始使用。</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="password_forget_import">点击导入</string>
    <string name="transfer_from">付款钱包</string>
    <string name="receive_wallet_address">收款人钱包地址</string>
    <string name="transfer_gas">矿工费</string>
    <string name="send_amount">金额</string>
    <string name="wallet_commit">提交</string>
    <string name="wallet_send">转账</string>
    <string name="title_transfer_loading">交易进行中，请稍候...</string>
    <string name="button_validate">去验证</string>
    <string name="create_wallet">创建钱包</string>
    <string name="transfer_address_error">收款人地址有误</string>
    <string name="transfer_gas_error">需要足够的ETH来支付GAS费</string>
    <string name="transfer_balance_error">余额不足</string>
    <string name="commit_fail">提交失败,请核对所填信息</string>
    <string name="message_notnull">不能为空</string>
    <string name="transfer_address_equals">收款人地址不能是自己</string>
    <string name="wallet_password_error">密码错误</string>
    <string name="title_sys_qrcode">将二维码/条码放入框内，即可自动扫描</string>
    <string name="wallet_scan">扫一扫</string>
    <string name="password_not_match">重复密码与密码不一致,请重新输入</string>
    <string name="remarks_no_space">备注</string>
    <string name="title_loading">请稍候...</string>
    <string name="title_create_did">创建</string>
    <string name="button_create">创建</string>
    <string name="title_login">登录</string>
    <string name="receive_qr_code">收款码</string>
    <string name="copy_success">复制成功</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="title_create_account_notice">还没有账号？请输入密码创建</string>
    <string name="wallet_import_notice">请注意先选择您钱包所在的平台链进行导入，否则将无法匹配到您正确的钱包</string>
    <string name="input_confirm_num">请确认数量</string>
    <string name="copy_your_privatekey">抄写下你的钱包私钥</string>
    <string name="keystore_input_password">请输入密钥库密码</string>
    <string name="privatekey_important">安全警告 ：私钥未经加密，导出存在风险，建议使用助记词和Keystore进行备份。</string>
    <string name="copy_your_keystore">抄写下你的钱包Keystore</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="wallet_mnemonic">助记词</string>
    <string name="wallet_backup">最后一步：立即备份你的钱包</string>
    <string name="password_not_length">密码长度至少8位</string>
    <string name="input_mnemonic_error">格式错误</string>
    <string name="wallet_password">密码</string>
    <string name="title_wallet">钱包</string>
    <string name="mnemonic_placeholder">助记词，用空格分隔</string>
    <string name="wallet_confirm_passowrd">重复密码</string>
    <string name="password_hint">密码提示信息(可不填)</string>
    <string name="copy_your_mnemonic">抄写下你的钱包助记词</string>
    <string name="mnemonic_important">助记词用于恢复钱包或重置钱包密码，将它抄写到纸上，并存放在只有你知道的安全地方。</string>
    <string name="wallet_start_import">开始导入</string>
    <string name="copy_receive_address">复制钱包地址</string>
    <string name="done">完成</string>
    <string name="progress_loading"> 加载中...</string>
    <string name="input_password">输入密码</string>
    <string name="wallet_cancel">取消</string>
    <string name="wallet_confirm">确定</string>
    <string name="photo_soruce"> 图片来源</string>
    <string name="photo_local"> 选择本地图片</string>
    <string name="photo_camera">拍照</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_my_ticket">MyTicketActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my">我的活动</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_detial">DetialActivity</string>
</resources>
